Add title and logo

--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="/public/logo" href="/public/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>onlinelearningplatform-client</title>
+    <title>SkillHub - Learn Smarter, Grow Faster</title>
+    <meta
+      name="description"
+      content="SkillHub is an online learning platform offering courses, quizzes, and certifications to help students and professionals enhance their skills efficiently."
+    />
+    <meta
+      name="keywords"
+      content="SkillHub, online learning, e-learning, courses, education, quizzes, skill development"
+    />
+    <meta name="author" content="SkillHub Team" />
   </head>
   <body>
     <div id="root"></div>
